--- a/WordPress/Resources/id.lproj/Localizable.strings
+++ b/WordPress/Resources/id.lproj/Localizable.strings
@@ -715,6 +715,9 @@ translators: Block name. %s: The localized block name */
 /* Error message shown when trying to view the Scan History feature and there is no internet connection. */
 "An active internet connection is required to view the history" = "Diperlukan koneksi internet yang aktif untuk melihat riwayat";
 
+/* Default error message displayed when unable to close user account. */
+"An error occured while closing account." = "Terjadi error saat menutup akun.";
+
 /* An error description explaining that a Menu could not be created. */
 "An error occurred creating the Menu." = "Kesalahan terjadi ketika membuat Menu.";
 
@@ -7276,6 +7279,15 @@ translators: Block name. %s: The localized block name */
 /* Message shown when the reader finds no posts for the chosen site */
 "This site has not posted anything yet. Try back later." = "Situs ini belum memposting sesuatu. Coba kembali lagi nanti.";
 
+/* Error message displayed when unable to close user account due to unresolved chargebacks. */
+"This user account cannot be closed if there are unresolved chargebacks." = "Akun pengguna ini tidak dapat ditutup jika ada proses penagihan balik yang belum terselesaikan.";
+
+/* Error message displayed when unable to close user account due to having active purchases. */
+"This user account cannot be closed while it has active purchases." = "Akun pengguna berikut tidak dapat ditutup jika memiliki pembelian aktif.";
+
+/* Error message displayed when unable to close user account due to having active subscriptions. */
+"This user account cannot be closed while it has active subscriptions." = "Akun pengguna berikut tidak dapat ditutup jika memiliki langganan aktif.";
+
 /* A description of the twitter sharing setting.
    Information about the twitter sharing feature. */
 "This will be included in tweets when people share using the Twitter button." = "Ini akan disertakan dalam tweet saat orang-orang berbagi dengan tombol Twitter.";
@@ -7347,7 +7359,7 @@ translators: Block name. %s: The localized block name */
    NSPhotoLibraryUsageDescription: Sentence to justify why the app asks permission from the user to access is Media Library. */
 "To add photos or videos to your posts." = "Untuk menambahkan foto atau video ke pos Anda.";
 
-/* Error message displayed when unable to close user account. */
+/* Error message displayed when unable to close user account due to having active atomic site. */
 "To close this account now, contact our support team." = "Untuk menutup akun ini sekarang juga, hubungi tim dukungan kami.";
 
 /* Instructions for alert asking for email and name. */
@@ -8795,6 +8807,9 @@ translators: Block name. %s: The localized block name */
 
 /* Displayed in the Notifications Tab as a title, when the Unread Filter shows no unread notifications as a title */
 "You're all up to date!" = "Semua sudah diperbarui!";
+
+/* Error message displayed when unable to close user account due to being unauthorized. */
+"You're not authorized to close the account." = "Anda tidak berwenang untuk menutup akun.";
 
 /* Message displayed on a post's card when the post has unsaved changes */
 "You've made unsaved changes to this post" = "Anda telah membuat perubahan yang tidak tersimpan di pos ini";
